@@ -15,12 +15,16 @@
 		'@srcdir@/client/exmpp_client_tls',
 		'@srcdir@/client/exmpp_client_compression',
 		'@srcdir@/client/exmpp_client_sasl',
+		'@srcdir@/client/exmpp_client_binding',
+		'@srcdir@/client/exmpp_client_session',
 		'@srcdir@/client/exmpp_client_legacy_auth',
 		'@srcdir@/client/exmpp_client_pubsub',
 		'@srcdir@/server/exmpp_server_stream',
 		'@srcdir@/server/exmpp_server_tls',
 		'@srcdir@/server/exmpp_server_compression',
 		'@srcdir@/server/exmpp_server_sasl',
+		'@srcdir@/server/exmpp_server_binding',
+		'@srcdir@/server/exmpp_server_session',
 		'@srcdir@/server/exmpp_server_legacy_auth'@COMPAT_MODULES_START@
 		@COMPAT_MODULES@'@srcdir@/compat/ejabberd_zlib',
 		@COMPAT_MODULES@'@srcdir@/compat/iconv',
